--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       h1, div.chapter {
         margin-top: 40px;
       }
+      div.chapter:last-child {
+        margin-bottom: 40px;
+      }
       h1, h2, h3, h4, h5, h6 {
         font-family: mrs-eaves-roman-petite-caps, sans-serif;
         font-weight: 400;
