--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html>
   <head>
+
     <meta charset="utf-8">
     <title>PERDITIS 🏺INVENTIS</title>
+
+    <!-- iOS specific catches -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+
+
     <link rel="stylesheet" href="https://use.typekit.net/uhv1skr.css">
     <style>
       * { margin: 0; padding: 0; }
@@ -34,6 +42,7 @@
         margin-bottom: 10px;
       }
     </style>
+
   </head>
   <body>
     <h1 id="title"></h1>
