--- a/visualization.html
+++ b/visualization.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="scripts">
-      <script src="./node_modules/two.js/build/two.js"></script>
+      <script src="./third-party/two.js"></script>
       <script src="./third-party/xhr.js"></script>
       <script>
 
