--- a/visualization.html
+++ b/visualization.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
   </head>
-  <body>
+  <body style="background: white;">
     <div class="scripts">
       <script src="./third-party/two.js"></script>
       <script src="./third-party/xhr.js"></script>
       <script>
 
-        var amount = 25;
+        var amount = 20;
         var drag = 0.04;
         var added = false;
         var words = {
