--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       </a>
     </div>
 
-    <div class="scripts"></div>
+    <div class="scripts">
+      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/523e97fad789c8129168aaaeb/8831547220b27bde366326894.js");</script>
+    </div>
   </body>
 </html>
