Added About the Author Section

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
   <body>
 
     <br />
-    <h1>
+    <h1 id="title">
       PERDITIS<span class="small-caps amphora">🏺</span>INVENTIS
     </h1>
 
     <div class="description">
 
-      <div class="visual">
+      <div id="hero" class="visual">
         <img src="./images/2-cover.jpg" width="100%" height="*" />
         <p class="caption">
           Laser Engraved Cover, 2018.
         </p>
       </div>
 
-      <p>
+      <p id="synopsis">
         <span class="small-caps">PERDITIS 🏺INVENTIS</span> or <i>Lost Treasures Found</i> is a unique edition of Petronius’ sultry portrayal of common life in Ancient Rome, the Satyricon. The original Latin text is filtered and then paired with Emojis through a custom computer program. Each of the more than eleven thousand unique words in the story are translated into English through <i>Google Translate</i>. When the translated English word matches a keyword in <i>Apple</i>’s Emoji dictionary, the original Latin word is substituted for its corresponding Emoji. The result is a printed book full of subversions that question the relationship of time and language through technology.
       </p>
 
-      <div class="visual">
+      <div id="walkthrough" class="visual">
         <video width="100%" height="*" muted="true" inline="true" autoplay="true" loop="true">
           <source src="./video/lost-treasures-found-walkthrough.mp4" type="video/mp4" />
         </video>
@@ -55,14 +55,14 @@
         Today, digital culture occupies our focus and pushes Encolpius into the shadows. We are not building off our predecessors as much as we are obscuring them. In an attempt to uphold one of Newton’s Giants, <i>Lost Treasures Found</i> offers contemporary access to the story of Encolpius. With no prior understanding of Latin, people can dive into the text and catch glimpses of Ancient Roman daily life. The Latin literate are presented with a familiar story set against an unexpected, but appropriate modern backdrop. Ultimately, this book collapses two-thousand years of progress and exposes two distant cultures to each other.
       </p>
 
-      <div class="visual">
+      <div id="visualization" class="visual">
         <iframe src="./visualization.html" width="100%" height="360" frameborder="0" style="border: 1px solid #000;"></iframe>
         <p class="caption">
           Transcode Process, 2018.
         </p>
       </div>
 
-      <div class="visual slideshow">
+      <div id="slideshow" class="visual slideshow">
         <img src="./images/1-texture.jpg" width="49%" height="*" />
         <img src="./images/3-cover-profile.jpg" width="49%" height="*" />
         <img src="./images/4-spine.jpg" width="49%" height="*" />
@@ -73,7 +73,7 @@
         <img src="./images/9-body-reverse.jpg" width="49%" height="*" />
       </div>
 
-      <div>
+      <div id="details">
         <ul class="details">
           <li>
             Laser engraved leather cover
@@ -91,6 +91,24 @@
             Paperback
           </li>
         </ul>
+      </div>
+
+      <div id="creator">
+        <h3>
+          About the Creator
+        </h3>
+        <div class="centered">
+          <img src="./images/portrait.jpg" width="49%" height="*" />
+          <p class="caption">
+            <a href="https://jforjane.com" target="_blank">Dulay, Jane</a>. Looking Ahead, 2018.
+          </p>
+        </div>
+        <p>
+          <a href="https://jono.fyi/" target="_blank">Jono</a> is an Emmy award winning graphic designer and computer programmer. He is currently earning a Master of Fine Arts in New Media at <a href="https://paris.edu/" target="_blank">Paris College of Art</a>. He is interested in combining graphic design and computer programming to explore culture. His work has been showcased at the Tate Modern, Siggraph, FITC, and the Japan Media Arts Festival as well as featured in publications like The New Yorker and Wired Magazine.
+        </p>
+      </div>
+
+      <div class="visual">
         <p>
           Currently looking for a publisher. For more information please get in touch through email: <a href="mailto:inquiries@jono.fyi">inquiries@jono.fyi</a>
         </p>
@@ -104,8 +122,12 @@
       </a>
     </div>
 
+    <div id="footer">
+
+    </div>
+
     <div class="scripts">
-      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/523e97fad789c8129168aaaeb/a56987aaa9156020b22863239.js");</script>
+      <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/523e97fad789c8129168aaaeb/8831547220b27bde366326894.js");</script>
     </div>
   </body>
 </html>
