--- a/index.html
+++ b/index.html
@@ -123,7 +123,23 @@
     </div>
 
     <div id="footer">
-
+      <ul class="details centered">
+        <li>
+          <a href="https://jono.fyi/" target="_blank">Website</a>
+        </li>
+        <li>
+          <a href="https://instagram.com/jonobr1" target="_blank">Instagram</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/jonobr1" target="_blank">Twitter</a>
+        </li>
+        <li>
+          <a href="https://facebook.com/jono-fyi" target="_blank">Facebook</a>
+        </li>
+        <li>
+          &copy; 2019
+        </li>
+      </ul>
     </div>
 
     <div class="scripts">
