Added Sign Up Page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
       <div id="walkthrough" class="visual">
         <video width="100%" height="*" muted="true" inline="true" autoplay="true" loop="true">
-          <source src="./video/lost-treasures-found-walkthrough.mp4" type="video/mp4" />
+          <source src="./video/lost-treasures-found-walkthrough-1080.mp4" type="video/mp4" />
+          <source src="./video/lost-treasures-found-walkthrough-1080.webm" type="video/webm" />
         </video>
         <p class="caption">
           Book Walkthrough, 2019.
@@ -116,12 +117,6 @@
 
     </div>
 
-    <div id="preorder-cta">
-      <a href="#">
-        <img src="./images/sticker.svg">
-      </a>
-    </div>
-
     <div id="footer">
       <ul class="details centered">
         <li>
@@ -140,6 +135,12 @@
           &copy; 2019
         </li>
       </ul>
+    </div>
+
+    <div id="preorder-cta">
+      <a href="./signup.html">
+        <img src="./images/sticker.svg">
+      </a>
     </div>
 
     <div class="scripts">
