Updated Book Details

--- a/index.html
+++ b/index.html
@@ -75,21 +75,42 @@
       </div>
 
       <div id="details">
-        <ul class="details">
+        <ul class="details centered">
           <li>
             Laser engraved leather cover
           </li>
           <li>
-            Printed November 2018
+            Printed November, 2018
+          </li>
+          <li>
+            Paris, France
           </li>
           <li>
             166 pages
           </li>
           <li>
-            Acid free paper / 200gm / A5
+            Canson paper
+          </li>
+          <li>
+            Acid free
+          </li>
+          <li>
+             200gm
+          </li>
+          <li>
+            148 &times; 210mm
           </li>
           <li>
             Paperback
+          </li>
+          <li>
+            Perfect bound
+          </li>
+          <li>
+            Mrs. Eaves
+          </li>
+          <li>
+            Apple Color Emoji
           </li>
         </ul>
       </div>
