--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
 
     <meta charset="utf-8">
+
+    <!-- Primary Meta Tags -->
     <title>Lost Treasures Found</title>
+    <meta name="title" content="PERDITIS 🏺INVENTIS ">
+    <meta name="description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
+    <meta name="keywords" content="latin, emoji, new media, book, laser, engrave, jono, transcode, edition, satyricon, petronius, encolpius, ascyltus, agamemnon, giton, mrs eaves, apple emoji one, google translate, video, documentation, retail">
 
     <!-- iOS specific catches -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,6 +19,20 @@
     <link type="text/css" rel="stylesheet" href="./styles/main.css">
 
     <link rel="icon" type="image/png" href="./images/favicon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lost-and-found.gifts">
+    <meta property="og:title" content="PERDITIS 🏺INVENTIS ">
+    <meta property="og:description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://lost-and-found.gifts">
+    <meta property="twitter:title" content="PERDITIS 🏺INVENTIS ">
+    <meta property="twitter:description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
   </head>
   <body>
