--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lost Treasures Found</title>
     <meta name="title" content="PERDITIS 🏺INVENTIS ">
     <meta name="description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
-    <meta name="keywords" content="latin, emoji, new media, book, laser, engrave, jono, transcode, edition, satyricon, petronius, encolpius, ascyltus, agamemnon, giton, mrs eaves, apple emoji one, google translate, video, documentation, retail">
+    <meta name="keywords" content="latin, emoji, new media, book, laser, engrave, jono, transcode, edition, satyricon, petronius, encolpius, ascyltus, agamemnon, giton, mrs eaves, apple emoji one, google translate, video, documentation, retail, paris, france, acid free, paris college of art, mfa, masters, a5, paperback">
 
     <!-- iOS specific catches -->
     <meta name="apple-mobile-web-app-capable" content="yes">
