--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://lost-and-found.gifts">
-    <meta property="og:title" content="PERDITIS 🏺INVENTIS ">
+    <meta property="og:title" content="PERDITIS🏺INVENTIS ">
     <meta property="og:description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://lost-and-found.gifts/images/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://lost-and-found.gifts">
     <meta property="twitter:title" content="PERDITIS 🏺INVENTIS ">
     <meta property="twitter:description" content="a.k.a. Lost Treasures Found is a book that combines Latin and Emojis.">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="https://lost-and-found.gifts/images/thumbnail.jpg">
 
   </head>
   <body>
