--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </p>
         </div>
         <p>
-          <a href="https://jono.fyi/" target="_blank">Jono</a> is an Emmy award winning graphic designer and computer programmer. He is currently earning a Master of Fine Arts in New Media at <a href="https://paris.edu/" target="_blank">Paris College of Art</a>. He is interested in combining graphic design and computer programming to explore culture. His work has been showcased at the Tate Modern, Siggraph, FITC, and the Japan Media Arts Festival as well as featured in publications like The New Yorker and Wired Magazine.
+          <a href="https://jono.fyi/" target="_blank">Jono</a> is an Emmy award winning graphic designer and computer programmer. He is currently earning a Master of Fine Arts in New Media at <a href="https://paris.edu/" target="_blank">Paris College of Art</a>. He is interested in combining art and technology to explore culture. His work has been showcased at the Tate Modern, Siggraph, FITC, and the Japan Media Arts Festival as well as featured in publications like The New Yorker and Wired Magazine.
         </p>
       </div>
 
